# LFBA_with_sound

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: continuous_recording.py  dataset_annotator.py  dataset_collector.py  dataset_viewer.py  mike_test.py  run_annotator.py  run_viewer.py
app/recording/: continuous_camera.py
app/test/: predict_torch.py
app/test/pipeline/: audio_model.py  recorder.py  run_live_inference.py
app/whisper/: realtime_whisper.py  realtime_whisper_cuda.py  realtime_whisper_vad.py  run_whisper_test.py  whisper_test.py
