[tool.poetry]
name = "fujikawa"
version = "0.1.0"
description = ""
authors = ["fujikawa <fujikawa@example.com>"]
readme = "README.md"
packages = [
    {include = "app", from = "."}
]

[tool.poetry.dependencies]
python = "^3.11"
sounddevice = "^0.5.2"
numpy = "^2.2.0"
opencv-python = "^4.11.0.86"
streamlit = "^1.32.0"
Pillow = "^11.0.0"
pandas = "^2.2.0"
torch = "^2.7.1"
matplotlib = "^3.10.3"
japanize-matplotlib = "^1.1.3"
torchviz = "^0.0.3"
ipython = "^9.3.0"
faster-whisper = "^1.1.1"
transformers = "^4.53.2"
llvmlite = "^0.44.0"
numba = "^0.61.2"
openai-whisper = "20250625"
librosa = "^0.11.0"
scipy = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
